// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawerTab has correct icon when collapsed 1`] = `
<div
  className="c-drawer-tab"
>
  <button
    className="c-drawer-tab__tab-button"
    data-testid="drawer-tab-button"
    onClick={[MockFunction]}
    title="Expand"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg/>",
        }
      }
    />
  </button>
</div>
`;

exports[`drawerTab has correct icon when visible 1`] = `
<div
  className="c-drawer-tab"
>
  <button
    className="c-drawer-tab__tab-button"
    data-testid="drawer-tab-button"
    onClick={[MockFunction]}
    title="Collapse"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg/>",
        }
      }
    />
  </button>
</div>
`;
